# OCR-Paddle

./: README.md  main.py  pyproject.toml
